input-sys/include/libinput.1.26.0.h


struct libinput;
struct libinput_tablet_tool;
struct libinput_event_tablet_tool;
enum libinput_button_state {
	LIBINPUT_BUTTON_STATE_RELEASED = 0,
	LIBINPUT_BUTTON_STATE_PRESSED = 1
};
enum libinput_tablet_tool_type {
	LIBINPUT_TABLET_TOOL_TYPE_PEN = 1,	
	LIBINPUT_TABLET_TOOL_TYPE_ERASER,	
	LIBINPUT_TABLET_TOOL_TYPE_BRUSH,	
	LIBINPUT_TABLET_TOOL_TYPE_PENCIL,	
	LIBINPUT_TABLET_TOOL_TYPE_AIRBRUSH,	
	LIBINPUT_TABLET_TOOL_TYPE_MOUSE,	
	LIBINPUT_TABLET_TOOL_TYPE_LENS,		
	LIBINPUT_TABLET_TOOL_TYPE_TOTEM,	
};
enum libinput_tablet_tool_proximity_state {
	LIBINPUT_TABLET_TOOL_PROXIMITY_STATE_OUT = 0,
	LIBINPUT_TABLET_TOOL_PROXIMITY_STATE_IN = 1,
};
enum libinput_tablet_tool_tip_state {
	LIBINPUT_TABLET_TOOL_TIP_UP = 0,
	LIBINPUT_TABLET_TOOL_TIP_DOWN = 1,
};
enum libinput_event_type {
	LIBINPUT_EVENT_NONE = 0,
	LIBINPUT_EVENT_DEVICE_ADDED,
	LIBINPUT_EVENT_DEVICE_REMOVED,
	LIBINPUT_EVENT_KEYBOARD_KEY = 300,
	LIBINPUT_EVENT_POINTER_MOTION = 400,
	LIBINPUT_EVENT_POINTER_MOTION_ABSOLUTE,
	LIBINPUT_EVENT_POINTER_BUTTON,
	LIBINPUT_EVENT_POINTER_AXIS,
	LIBINPUT_EVENT_POINTER_SCROLL_WHEEL,
	LIBINPUT_EVENT_POINTER_SCROLL_FINGER,
	LIBINPUT_EVENT_POINTER_SCROLL_CONTINUOUS,
	LIBINPUT_EVENT_TOUCH_DOWN = 500,
	LIBINPUT_EVENT_TOUCH_UP,
	LIBINPUT_EVENT_TOUCH_MOTION,
	LIBINPUT_EVENT_TOUCH_CANCEL,
	LIBINPUT_EVENT_TOUCH_FRAME,
	LIBINPUT_EVENT_TABLET_TOOL_AXIS = 600,
	LIBINPUT_EVENT_TABLET_TOOL_PROXIMITY,
	LIBINPUT_EVENT_TABLET_TOOL_TIP,
	LIBINPUT_EVENT_TABLET_TOOL_BUTTON,
	LIBINPUT_EVENT_TABLET_PAD_BUTTON = 700,
	LIBINPUT_EVENT_TABLET_PAD_RING,
	LIBINPUT_EVENT_TABLET_PAD_STRIP,
	LIBINPUT_EVENT_TABLET_PAD_KEY,
	LIBINPUT_EVENT_TABLET_PAD_DIAL,
	LIBINPUT_EVENT_GESTURE_SWIPE_BEGIN = 800,
	LIBINPUT_EVENT_GESTURE_SWIPE_UPDATE,
	LIBINPUT_EVENT_GESTURE_SWIPE_END,
	LIBINPUT_EVENT_GESTURE_PINCH_BEGIN,
	LIBINPUT_EVENT_GESTURE_PINCH_UPDATE,
	LIBINPUT_EVENT_GESTURE_PINCH_END,
	LIBINPUT_EVENT_GESTURE_HOLD_BEGIN,
	LIBINPUT_EVENT_GESTURE_HOLD_END,
	LIBINPUT_EVENT_SWITCH_TOGGLE = 900,
};
double
libinput_event_tablet_tool_get_wheel_delta(
				   struct libinput_event_tablet_tool *event);
int
libinput_event_tablet_tool_get_wheel_delta_discrete(
				    struct libinput_event_tablet_tool *event);
double
libinput_event_tablet_tool_get_x_transformed(struct libinput_event_tablet_tool *event,
					     uint32_t width);
double
libinput_event_tablet_tool_get_y_transformed(struct libinput_event_tablet_tool *event,
					     uint32_t height);
struct libinput_tablet_tool *
libinput_event_tablet_tool_get_tool(struct libinput_event_tablet_tool *event);
enum libinput_tablet_tool_proximity_state
libinput_event_tablet_tool_get_proximity_state(struct libinput_event_tablet_tool *event);
enum libinput_tablet_tool_tip_state
libinput_event_tablet_tool_get_tip_state(struct libinput_event_tablet_tool *event);
uint32_t
libinput_event_tablet_tool_get_button(struct libinput_event_tablet_tool *event);
enum libinput_button_state
libinput_event_tablet_tool_get_button_state(struct libinput_event_tablet_tool *event);
uint32_t
libinput_event_tablet_tool_get_seat_button_count(struct libinput_event_tablet_tool *event);
uint32_t
libinput_event_tablet_tool_get_time(struct libinput_event_tablet_tool *event);
uint64_t
libinput_event_tablet_tool_get_time_usec(struct libinput_event_tablet_tool *event);
enum libinput_tablet_tool_type
libinput_tablet_tool_get_type(struct libinput_tablet_tool *tool);
uint64_t
libinput_tablet_tool_get_tool_id(struct libinput_tablet_tool *tool);
struct libinput_tablet_tool *
libinput_tablet_tool_ref(struct libinput_tablet_tool *tool);
struct libinput_tablet_tool *
libinput_tablet_tool_unref(struct libinput_tablet_tool *tool);
int
libinput_tablet_tool_has_pressure(struct libinput_tablet_tool *tool);
int
libinput_tablet_tool_has_distance(struct libinput_tablet_tool *tool);
int
libinput_tablet_tool_has_tilt(struct libinput_tablet_tool *tool);
int
libinput_tablet_tool_has_rotation(struct libinput_tablet_tool *tool);
uint64_t
libinput_tablet_tool_get_serial(struct libinput_tablet_tool *tool);